Fixing padding and alignment

--- a/packages/manager/src/styles/globals.css
+++ b/packages/manager/src/styles/globals.css
@@ -73,9 +73,9 @@ body {
 .pf-c-nav__link {
   --pf-c-nav__link--hover--Color: #fff;
   --pf-c-nav__link--hover--after--BorderLeftWidth: 2px;
-  --pf-c-nav__link--hover--after--BorderColor: var(--spaship-global--Color--primary-blue);
+  --pf-c-nav__link--hover--after--BorderColor: #fff;
   --pf-c-nav__link--m-current--after--BorderColor: var(--spaship-global--Color--primary-blue);
-  --pf-c-nav__link--m-current--Color: var(--spaship-global--Color--primary-blue);
+  --pf-c-nav__link--m-current--Color: #fff;
   transition: all 250ms linear;
   padding-left: 8px;
   padding-right: 8px;
@@ -256,8 +256,12 @@ body {
 }
 .pf-c-nav__section-title {
   padding: 8px;
+  font-size: 12px;
+  margin: 0px;
 }
-
+.pf-c-nav__section + .pf-c-nav__section {
+  --pf-c-nav__section--MarginTop: 0px;
+}
 .pf-c-page__main-body {
   padding-top: 0px !important;
 }
